[gd_scene load_steps=25 format=2]

[ext_resource path="res://Character/Character_Controller.gd" type="Script" id=1]
[ext_resource path="res://Character/Idle.gd" type="Script" id=2]
[ext_resource path="res://Character/Character_State_Machine.gd" type="Script" id=3]
[ext_resource path="res://Character/Jump.gd" type="Script" id=4]
[ext_resource path="res://Character/assets/tile545.png" type="Texture" id=5]
[ext_resource path="res://Character/Move.gd" type="Script" id=6]
[ext_resource path="res://Character/assets/tile546.png" type="Texture" id=7]
[ext_resource path="res://Character/assets/tile547.png" type="Texture" id=8]
[ext_resource path="res://Character/assets/tile544.png" type="Texture" id=9]
[ext_resource path="res://Character/assets/tile514.png" type="Texture" id=10]
[ext_resource path="res://Character/assets/tile513.png" type="Texture" id=11]
[ext_resource path="res://Character/assets/tile515.png" type="Texture" id=12]
[ext_resource path="res://Character/assets/tile519.png" type="Texture" id=13]
[ext_resource path="res://Character/assets/tile518.png" type="Texture" id=14]
[ext_resource path="res://Character/assets/tile517.png" type="Texture" id=15]
[ext_resource path="res://Character/assets/tile512.png" type="Texture" id=16]
[ext_resource path="res://Character/assets/tile516.png" type="Texture" id=17]
[ext_resource path="res://Character/RayCast2D.gd" type="Script" id=18]
[ext_resource path="res://Character/Lighting.gd" type="Script" id=19]
[ext_resource path="res://UI/Cursor.tscn" type="PackedScene" id=20]
[ext_resource path="res://LevelTimer/LevelTimer.tscn" type="PackedScene" id=21]
[ext_resource path="res://Character/state_name_displayer.gd" type="Script" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": true,
"name": "jump",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.987, 14.315 )

[node name="Character" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 488.763, 91.815 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -57.6632
margin_top = -43.6057
margin_right = 59.3368
margin_bottom = -16.6057
align = 1
valign = 1
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character_State_Machine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="Character_State_Machine"]
script = ExtResource( 2 )

[node name="Move" type="Node" parent="Character_State_Machine"]
script = ExtResource( 6 )

[node name="Jump" type="Node" parent="Character_State_Machine"]
script = ExtResource( 4 )

[node name="Lighting" type="Node" parent="Character_State_Machine"]
script = ExtResource( 19 )

[node name="BodyPivot" type="Position2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="BodyPivot"]
frames = SubResource( 1 )
animation = "jump"

[node name="RayCast2DLighting" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 1500 )
collide_with_areas = true
script = ExtResource( 18 )

[node name="Camera2D" type="Camera2D" parent="." groups=[
"player",
]]
current = true

[node name="Line2DAim" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 6.0
default_color = Color( 0.4, 0.501961, 1, 0.560784 )

[node name="Cursor" parent="." instance=ExtResource( 20 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"player",
]]
position = Vector2( -1, 2 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="LevelTimer" parent="." instance=ExtResource( 21 )]
position = Vector2( -13.983, -207.664 )

[node name="ImpulseTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="state_changed" from="Character_State_Machine" to="Label" method="_on_Character_State_Machine_state_changed"]
[connection signal="timeOut" from="LevelTimer" to="." method="_on_LevelTimer_timeOut"]
[connection signal="timeout" from="ImpulseTimer" to="Character_State_Machine/Lighting" method="_on_Timer_timeout"]
